// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Consonant/FiltersInfo Check snapshots should renders correctly when desktop width 1`] = `
<aside
  className="consonant-filters-info"
  data-testid="consonant-filters__info"
>
  <div
    className="consonant-filters-info--wrapper consonant-filters-info--wrapper_no-line"
  >
    <h2
      className="consonant-filters-info--title"
      data-testid="title"
    >
      A great collection
    </h2>
    <span
      className="consonant-filters-info--results"
      data-testid="results"
    >
      0 results
    </span>
  </div>
  <div
    className="consonant-filters-info--search"
  />
</aside>
`;

exports[`Consonant/FiltersInfo Check snapshots should renders correctly when mobile width 1`] = `
<aside
  className="consonant-filters-info"
  data-testid="consonant-filters__info"
>
  <div
    className="consonant-filters-info--search"
  />
  <div
    className="consonant-filters-info--btn-wrapper"
    data-testid="btn-wrapper"
  >
    <button
      className="consonant-filters-info--btn"
      data-testid="info-btn"
      onClick={[MockFunction]}
      type="button"
    >
      <span
        className="consonant-filters-info--btn-ico"
      />
      <span
        className="consonant-filters-info--btn-text"
      >
        filters
      </span>
    </button>
  </div>
</aside>
`;

exports[`Consonant/FiltersInfo Check snapshots should renders correctly with search 1`] = `
<aside
  className="consonant-filters-info"
  data-testid="consonant-filters__info"
>
  <div
    className="consonant-filters-info--wrapper consonant-filters-info--wrapper_no-line"
  >
    <h2
      className="consonant-filters-info--title"
      data-testid="title"
    >
      A great collection
    </h2>
    <span
      className="consonant-filters-info--results"
      data-testid="results"
    >
      0 results
    </span>
  </div>
  <div
    className="consonant-filters-info--search"
  >
    <div
      className="consonant-search"
      data-testid="searchFiltersInfo"
    >
      <label
        htmlFor="consonant-search"
      >
        <span
          className="consonant-search--input-title"
        >
          Search
        </span>
        <span
          className="consonant-search--input-wrapper"
        >
          <input
            className="consonant-search--input"
            data-testid="search-input"
            id="consonant-search"
            onChange={[Function]}
            placeholder="search text"
            required={true}
            type="search"
            value=""
          />
          <button
            className="consonant-search--input-clear"
            onClick={[Function]}
            title="Click to clear search query"
            type="button"
          >
            clear
          </button>
        </span>
      </label>
    </div>
  </div>
</aside>
`;

exports[`Consonant/FiltersInfo Check snapshots should renders correctly with select 1`] = `
<aside
  className="consonant-filters-info"
  data-testid="consonant-filters__info"
>
  <div
    className="consonant-filters-info--wrapper"
  >
    <h2
      className="consonant-filters-info--title"
      data-testid="title"
    >
      A great collection
    </h2>
    <span
      className="consonant-filters-info--results"
      data-testid="results"
    >
      0 results
    </span>
  </div>
  <div
    className="consonant-filters-info--search"
  />
  <div
    className="consonant-select"
  >
    <button
      className="consonant-select--btn"
      data-testid="select-button"
      onClick={[MockFunction]}
      tabIndex="0"
      type="button"
    >
      Please select
    </button>
    <div
      className="consonant-select--options consonant-select--options_right"
      data-testid="consonant-select--options"
    >
      <button
        className="consonant-select--option"
        data-testid="select-option"
        onClick={[Function]}
        tabIndex="0"
        type="button"
      >
        label 1
      </button>
      <button
        className="consonant-select--option"
        data-testid="select-option"
        onClick={[Function]}
        tabIndex="0"
        type="button"
      >
        label 2
      </button>
      <button
        className="consonant-select--option"
        data-testid="select-option"
        onClick={[Function]}
        tabIndex="0"
        type="button"
      >
        label 3
      </button>
      <button
        className="consonant-select--option"
        data-testid="select-option"
        onClick={[Function]}
        tabIndex="0"
        type="button"
      >
        label 4
      </button>
      <button
        className="consonant-select--option"
        data-testid="select-option"
        onClick={[Function]}
        tabIndex="0"
        type="button"
      >
        label 5
      </button>
    </div>
  </div>
</aside>
`;

exports[`Consonant/FiltersInfo Check snapshots should renders correctly with two children 1`] = `
<aside
  className="consonant-filters-info"
  data-testid="consonant-filters__info"
>
  <div
    className="consonant-filters-info--wrapper"
  >
    <h2
      className="consonant-filters-info--title"
      data-testid="title"
    >
      A great collection
    </h2>
    <span
      className="consonant-filters-info--results"
      data-testid="results"
    >
      0 results
    </span>
  </div>
  <div
    className="consonant-filters-info--search"
  >
    <div
      className="consonant-search"
      data-testid="searchFiltersInfo"
    >
      <label
        htmlFor="consonant-search"
      >
        <span
          className="consonant-search--input-title"
        >
          Search
        </span>
        <span
          className="consonant-search--input-wrapper"
        >
          <input
            className="consonant-search--input"
            data-testid="search-input"
            id="consonant-search"
            onChange={[Function]}
            placeholder="search text"
            required={true}
            type="search"
            value=""
          />
          <button
            className="consonant-search--input-clear"
            onClick={[Function]}
            title="Click to clear search query"
            type="button"
          >
            clear
          </button>
        </span>
      </label>
    </div>
  </div>
  <div
    className="consonant-select"
  >
    <button
      className="consonant-select--btn"
      data-testid="select-button"
      onClick={[MockFunction]}
      tabIndex="0"
      type="button"
    >
      Please select
    </button>
    <div
      className="consonant-select--options consonant-select--options_right"
      data-testid="consonant-select--options"
    >
      <button
        className="consonant-select--option"
        data-testid="select-option"
        onClick={[Function]}
        tabIndex="0"
        type="button"
      >
        label 1
      </button>
      <button
        className="consonant-select--option"
        data-testid="select-option"
        onClick={[Function]}
        tabIndex="0"
        type="button"
      >
        label 2
      </button>
      <button
        className="consonant-select--option"
        data-testid="select-option"
        onClick={[Function]}
        tabIndex="0"
        type="button"
      >
        label 3
      </button>
      <button
        className="consonant-select--option"
        data-testid="select-option"
        onClick={[Function]}
        tabIndex="0"
        type="button"
      >
        label 4
      </button>
      <button
        className="consonant-select--option"
        data-testid="select-option"
        onClick={[Function]}
        tabIndex="0"
        type="button"
      >
        label 5
      </button>
    </div>
  </div>
</aside>
`;
